fix for maven test failures