@@ -24,7 +24,7 @@
         <log4j2-version>2.9.1</log4j2-version>
         <springfox-swagger-version>2.9.2</springfox-swagger-version>
         <javax-servlet-api-version>4.0.1</javax-servlet-api-version>
-        <jackson-databind-version>2.9.9.3</jackson-databind-version>
+        <jackson-databind-version>2.9.10</jackson-databind-version>
         <tomcat-embed-version>7.0.100</tomcat-embed-version>
         <junit-version>4.13</junit-version>
         <apache-commons-lang-version>3.9</apache-commons-lang-version>
@@ -75,6 +75,11 @@
             <version>${httpclient-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-databind-version}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -131,6 +136,7 @@
 
     <build>
         <finalName>backbase-openbank-service</finalName>
+        <defaultGoal>test</defaultGoal>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -138,7 +144,17 @@
                     <artifactId>tomcat7-maven-plugin</artifactId>
                     <version>2.2</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.14</version>
+                    <configuration>
+                        <argLine>
+                            -Djdk.attach.allowAttachSelf
+                        </argLine>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
 </project>
